--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">MoodTracker</string>
+    <string name="mood_date">Mood\'s date</string>
+    <string name="Day">Day</string>
+    <string name="comment_button">Comment button</string>
+    <string name="history_button">History button</string>
+    <string name="smiley_happy">Smiley happy</string>
+    <string name="pie_chart_button">Pie chart button</string>
+    <string name="share_button">Share button</string>
+    <string name="type_your_comment_here">Type your comment here</string>
 </resources>
